# lovtrip

./: .env.example  .gitignore  2.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml.example
components/: __init__.py  map.py  poi.py  styles.py
config/: __init__.py
docs/: architecture.md  deployment.md  development.md  project_design.md
docs/course/: 【学生参考标准答案】人工智能学院FDE课程设计报告（完整作答成品）.docx  【教师下发模板】人工智能学院FDE课程设计报告（考核专用空白版）.docx
services/: __init__.py  baidu_map.py  weather.py
tests/: __init__.py  test_components.py  test_config.py  test_services.py
utils/: __init__.py
