[project]
name = "lovtrip"
version = "2.0.0"
description = "LovTrip · AI 智能旅游规划助手"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LovTrip Team"}
]
keywords = ["ai", "travel", "streamlit", "llm", "tourism", "travel-planner", "ai-assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | lib
  | venv
  | \.venv
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "lib/",
    "venv/",
    ".venv/",
    ".git/",
    "__pycache__/",
    "build/",
    "dist/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["config", "services", "components", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
